Add connection endpoint
