# src/main/kotlin/com/example/myrecordbe/domain/dto/PostSelector.kt
@@ -4,5 +4,6 @@ package com.example.myrecordbe.domain.dto
  * 投稿検索条件
  */
 data class PostSelector(
-    val user: String? = null
+    val user: String? = null,
+    val collectionName: String? = null
 )
