# src/main/kotlin/com/example/myrecordbe/domain/entity/Collection.kt
@@ -3,13 +3,10 @@ package com.example.myrecordbe.domain.entity
 import com.fasterxml.jackson.annotation.JsonProperty
 import com.google.cloud.Timestamp
 
-data class Post (
+data class Collection (
     @JsonProperty("id") var id:String? = null,
-    @JsonProperty("anime_name") val animeName: String? = null,
-    @JsonProperty("rating") val rating: Int? = null,
-    @JsonProperty("delete_flag") val deleteFlag: Boolean? = null,
+    @JsonProperty("name") val name: String? = null,
     @JsonProperty("user") val user: String? = null,
-    @JsonProperty("collection_name") val collectionName: String? = null,
     @JsonProperty("created_at") val createdAt: Timestamp? = null,
     @JsonProperty("updated_at") val updatedAt: Timestamp? = null,
     @JsonProperty("deleted_at") val deletedAt: Timestamp? = null
